feat: FE speech translate

--- a/frontend/src/translations/vi.json
+++ b/frontend/src/translations/vi.json
@@ -12,13 +12,19 @@
 	"taiTaiLieuTiengAnh": "Tải tài liệu tiếng Anh",
 	"taiTaiLieuTiengLao": "Tải tài liệu tiếng Lào",
 	"taiTaiLieuTiengKhome": "Tải tài liệu tiếng Khơme",
+	"taiChuyenNguTiengViet": "Tải chuyển ngữ tiếng Việt",
+	"taiChuyenNguTiengTrung": "Tải chuyển ngữ tiếng Trung",
+	"taiChuyenNguTiengAnh": "Tải chuyển ngữ tiếng Anh",
+	"taiChuyenNguTiengLao": "Tải chuyển ngữ tiếng Lào",
+	"taiChuyenNguTiengKhome": "Tải chuyển ngữ tiếng Khơme",
 	"dich": "Dịch",
 	"matKhauCu": "Mật khẩu cũ",
 	"matKhauMoi": "Mật khẩu mới",
 	"xacNhanMatKhauMoi": "Xác nhận mật khẩu mới",
 	"caiDatTaiKhoan": "Cài đặt tài khoản",
 	"chonTaiLieu": "Chọn tài liệu",
-	"taiTep": "Tải lên tệp .docx",
+	"taiTepTaiLieu": "Tải lên tệp .docx",
+	"taiTepAmThanh": "Tải lên tệp .mp3, .aac, .wav",
 	"timTepTenMayBan": "Tìm tệp trên máy tính của bạn",
 	"email": "Email",
 	"matKhau": "Mật khẩu",
@@ -52,7 +58,8 @@
 		"daThemVaoTuVung": "Đã thêm vào từ vựng",
 		"daSaoChep": "Đã sao chép",
 		"vanban": "Văn bản",
-		"tailieu": "Tài liệu"
+		"tailieu": "Tài liệu",
+		"amthanh": "Âm thanh"
 	},
 	"History":{
 		"title1" : "Lịch sử trống",
