fix: bug frontend

--- a/frontend/src/translations/vi.json
+++ b/frontend/src/translations/vi.json
@@ -41,8 +41,8 @@
 	"km": "Khơme",
 	"Translate": {
 		"khongHoTro": "Không hỗ trợ dịnh",
-		"title2" : "UET Multilingual Neural Machine Translation",
-		"title" : "UET Dịch máy đa ngôn ngữ",
+		"title2" : "Multilingual Neural Machine Translation",
+		"title" : "Dịch máy đa ngôn ngữ",
 		"phathienngonngu": "Phát hiện ngôn ngữ",
 		"nhapVanBan": "Nhập văn bản",
 		"bandich": "Bản dịch",
