feat: update user quota

--- a/frontend/src/translations/vi.json
+++ b/frontend/src/translations/vi.json
@@ -91,13 +91,21 @@
 	"createUser": "Thêm người dùng",
 	"updateSuccess":"Cập nhật thành công",
 	"createUserSuccess":"Thêm người dùng thành công",
-	"textQuota": "Lưu lượng dịch văn bản",
-	"textQuotaViEn": "Lưu lượng dịch văn bản Viet - Anh",
-	"textQuotaViZh": "Lưu lượng dịch văn bản Viet - Trung",
-	"audioQuotaViEn": "Lưu lượng dịch âm thanh Viet - Anh",
-	"audioQuotaViZh": "Lưu lượng dịch âm thanh Viet - Trung",
-	"audioQuota": "Lưu lượng dịch âm thanh",
+	"updateUserQuotaSuccess":"Cập nhật thành công",
+	"textQuota": "Giới hạn dịch văn bản",
+	"textQuotaViEn": "Giới hạn dịch văn bản Việt - Anh",
+	"textQuotaViZh": "Giới hạn dịch văn bản Việt - Trung",
+	"audioQuotaViEn": "Giới hạn dịch âm thanh Việt - Anh",
+	"audioQuotaViZh": "Giới hạn dịch âm thanh Việt - Trung",
+	"audioQuota": "Giới hạn dịch âm thanh",
 	"text_translate_limit_reached": "Vượt quá giới hạn dịch",
 	"audio_translate_limit_reached": "Vượt quá giới hạn dịch",
-	"unauthorized": "Không có quyền truy cập"
+	"unauthorized": "Không có quyền truy cập",
+	"sentence": "câu",
+	"minute": "phút",
+	"requiredField": "Thông tin bắt buộc",
+	"cancel": "Hủy bỏ",
+	"create": "Thêm",
+	"ViEn": "Việt - Anh",
+	"ViZh": "Việt - Trung"
 }
