--- a/frontend/src/translations/vi.json
+++ b/frontend/src/translations/vi.json
@@ -115,5 +115,6 @@
 	"create": "Thêm",
 	"ViEn": "Việt - Anh",
 	"ViZh": "Việt - Trung",
-	"inactive_user": "Tài khoản người dùng không hoạt động"
+	"inactive_user": "Tài khoản người dùng không hoạt động",
+	"no_access_media": "Không có quyền truy cập thiết bị truyền thông"
 }
