feat: add documents

--- a/frontend/src/translations/vi.json
+++ b/frontend/src/translations/vi.json
@@ -43,7 +43,7 @@
 	"km": "Khơme",
 	"Translate": {
 		"khongHoTro": "Không hỗ trợ dịnh",
-		"title" : "TekSpeech - dịch âm thanh, văn bản Trung, Anh - Việt",
+		"title" : "Giải pháp TekSpeech - dịch âm thanh, văn bản Trung, Anh - Việt",
 		"phathienngonngu": "Phát hiện ngôn ngữ",
 		"nhapVanBan": "Nhập văn bản",
 		"bandich": "Bản dịch",
