--- a/frontend/src/translations/vi.json
+++ b/frontend/src/translations/vi.json
@@ -1,4 +1,7 @@
 {
+	"warningNoAuth1": "Bạn cần ",
+	"warningNoAuth2": " đăng nhập ",
+	"warningNoAuth3": "để có thể sử dụng các dịch vụ.",
 	"title": "This Neural Machine Translation system is fully supported by the project 'Developing a multilingual translation system between Vietnamese and several other languages' funded by the Science and Technology Program KC 4.0, No. KC-4.0.12/19-25.",
 	"contact": "Contact KC-4.0.12/19-25 Team",
 	"footer": "© 2021 KC-4.0.12/19-25 Machine Translation Team",
@@ -41,8 +44,8 @@
 	"km": "Khơme",
 	"Translate": {
 		"khongHoTro": "Không hỗ trợ dịnh",
-		"title2" : "Multilingual Neural Machine Translation",
-		"title" : "Dịch máy đa ngôn ngữ",
+		"title2" : "UET Multilingual Neural Machine Translation",
+		"title" : "UET Dịch máy đa ngôn ngữ",
 		"phathienngonngu": "Phát hiện ngôn ngữ",
 		"nhapVanBan": "Nhập văn bản",
 		"bandich": "Bản dịch",
@@ -76,5 +79,44 @@
 		},
 		"daThemVaoTuVung": "Đã thêm vào từ vựng",
 		"daSaoChep": "Đã sao chép"
-	}
+	},
+	"login":"Đăng nhập",
+	"username": "Tên đăng nhập",
+	"lastName": "Họ",
+	"firstName": "Tên",
+	"password":"Mật khẩu",
+	"role": "Vai trò",
+	"status": "Trạng thái",
+	"admin":"Quản trị viên",
+	"member": "Người dùng",
+	"active": "Hoạt động",
+	"inactive": "Không hoạt động",
+	"createUser": "Thêm người dùng",
+	"updateUserQuota": "Cập nhật giới hạn dịch",
+	"updateSuccess":"Cập nhật thành công",
+	"createUserSuccess":"Thêm người dùng thành công",
+	"updateUserQuotaSuccess":"Cập nhật thành công",
+	"textQuota": "Giới hạn dịch văn bản",
+	"textQuotaViEn": "Giới hạn dịch văn bản Việt - Anh",
+	"textQuotaViZh": "Giới hạn dịch văn bản Việt - Trung",
+	"textQuotaViLo": "Giới hạn dịch văn bản Việt - Lào",
+	"textQuotaViKm": "Giới hạn dịch văn bản Việt - Khơme",
+	"textViEn": "Dịch văn bản Việt - Anh",
+	"textViZh": "Dịch văn bản Việt - Trung",
+	"textViLo": "Dịch văn bản Việt - Lao",
+	"textViKm": "Dịch văn bản Việt - Khơme",
+	"text_translate_limit_reached": "Vượt quá giới hạn dịch",
+	"unauthorized": "Không có quyền truy cập",
+	"sentence": "câu",
+	"minute": "phút",
+	"requiredField": "Thông tin bắt buộc",
+	"cancel": "Đóng",
+	"edit": "Sửa",
+	"create": "Thêm",
+	"ViEn": "Việt - Anh",
+	"ViZh": "Việt - Trung",
+	"ViLo": "Việt - Lào",
+	"ViKm": "Việt - Khơme",
+	"inactive_user": "Tài khoản người dùng không hoạt động",
+	"no_access_media": "Không có quyền truy cập thiết bị truyền thông"
 }
