chore: change text, file type input

--- a/frontend/src/translations/vi.json
+++ b/frontend/src/translations/vi.json
@@ -14,11 +14,14 @@
 	"taiTaiLieuTiengAnh": "Tải tài liệu tiếng Anh",
 	"taiTaiLieuTiengLao": "Tải tài liệu tiếng Lào",
 	"taiTaiLieuTiengKhome": "Tải tài liệu tiếng Khơme",
-	"taiChuyenNguTiengViet": "Tải chuyển ngữ tiếng Việt",
-	"taiChuyenNguTiengTrung": "Tải chuyển ngữ tiếng Trung",
-	"taiChuyenNguTiengAnh": "Tải chuyển ngữ tiếng Anh",
-	"taiChuyenNguTiengLao": "Tải chuyển ngữ tiếng Lào",
-	"taiChuyenNguTiengKhome": "Tải chuyển ngữ tiếng Khơme",
+	"taiVanBanDichTiengViet": "Tải văn bản dịch tiếng Việt",
+	"taiVanBanDichTiengTrung": "Tải văn bản dịch tiếng Trung",
+	"taiVanBanDichTiengAnh": "Tải văn bản dịch tiếng Anh",
+	"taiVanBanNhanDangTiengViet": "Tải văn bản nhận dạng tiếng Việt",
+	"taiVanBanNhanDangTiengTrung": "Tải văn bản nhận dạng tiếng Trung",
+	"taiVanBanNhanDangTiengAnh": "Tải văn bản nhận dạng tiếng Anh",
+	"taiVanBanNhanDangTiengLao": "Tải văn bản nhận dạng tiếng Lào",
+	"taiVanBanNhanDangTiengKhome": "Tải văn bản nhận dạng tiếng Khơme",
 	"dich": "Dịch",
 	"matKhauCu": "Mật khẩu cũ",
 	"matKhauMoi": "Mật khẩu mới",
