feat: translate pptx, xlsx file

--- a/frontend/src/translations/vi.json
+++ b/frontend/src/translations/vi.json
@@ -26,7 +26,7 @@
 	"xacNhanMatKhauMoi": "Xác nhận mật khẩu mới",
 	"caiDatTaiKhoan": "Cài đặt tài khoản",
 	"chonTaiLieu": "Chọn tài liệu",
-	"taiTepTaiLieu": "Tải lên tệp .docx",
+	"taiTepTaiLieu": "Tải lên tệp .docx, .txt, .pptx",
 	"taiTepAmThanh": "Tải lên tệp .mp3, .aac, .wav",
 	"timTepTenMayBan": "Tìm tệp trên máy tính của bạn",
 	"email": "Email",
