--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -2,8 +2,8 @@
 	"warningNoAuth1": "Bạn cần ",
 	"warningNoAuth2": " đăng nhập ",
 	"warningNoAuth3": "để có thể sử dụng các dịch vụ.",
-	"title": "This Neural Machine Translation system is fully supported by the project 'Developing a multilingual translation system between Vietnamese and several other languages' funded by the Science and Technology Program KC 4.0, No. KC-4.0.12/19-25.",
-	"contact": "Contact KC-4.0.12/19-25 Team",
+	"title": "Hệ thống dịch máy được xây dựng và hỗ trợ bởi dự án \"Phát triển hệ thống dịch đa ngữ giữa tiếng Việt và một số ngôn ngữ khác\", thuộc Chương trình khoa học và công nghệ trọng điểm cấp quốc gia giai đoạn đến năm 2025: \"Hỗ trợ nghiên cứu, phát triển và ứng dụng công nghệ của công nghiệp 4.0\", Mã số: KC-4.0/19-25. Đề tài được thực hiện với sự hỗ trợ của Bộ Khoa học và Công nghệ.",
+	"contact": "Liên hệ nhóm: KC-4.0.12/19-25",
 	"footer": "© 2021 KC-4.0.12/19-25 Machine Translation Team",
 	"chinhSuaTaiKhoan": "Chỉnh sửa tài khoản",
 	"danhSachTrong": "Danh sách trống",
